--- a/zuul-server.properties
+++ b/zuul-server.properties
@@ -1,13 +1,13 @@
 server.port = 9004
 
 #Zuul routes. Here for /microservice-produits path, we are routing to localhost:8090 with extra path after that.
-zuul.routes.microservice-produits.url=http://localhost:8080
+zuul.routes.produits.url=http://localhost:8080
 
 #Zuul routes. Here for /microservice-commandes path, we are routing to localhost:8081 with extra path after that.
-zuul.routes.microservice-commandes.url=http://localhost:8081
+zuul.routes.commandes.url=http://localhost:8081
 
 #Zuul routes. Here for /microservice-paiements path, we are routing to localhost:8082 with extra path after that.
-zuul.routes.microservice-paiements.url=http://localhost:8082
+zuul.routes.paiements.url=http://localhost:8082
 
 #Ribbon is auto integrated with Zuul and for this exercise we are not using that.
 ribbon.eureka.enabled=false
