--- a/microservice-produits.properties
+++ b/microservice-produits.properties
@@ -2,7 +2,7 @@ server.port=8080
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/tp-e-commerce
 spring.datasource.username=postgres
-spring.datasource.password=15Aout2001@
+spring.datasource.password=postgres
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
