--- a/microservice-produits.properties
+++ b/microservice-produits.properties
@@ -7,4 +7,4 @@ spring.datasource.password=${POSTGRES_PASSWORD:postgres}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
-eureka.client.serviceUrl.defaultZone=http://localhost:9102/eureka/
+eureka.client.serviceUrl.defaultZone=http://${EUREKA_HOST:localhost}:9102/eureka/
