--- a/microservice-paiements.properties
+++ b/microservice-paiements.properties
@@ -1,10 +1,10 @@
 server.port=8082
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/tp-e-commerce
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5435}/tp-e-commerce
+spring.datasource.username=${POSTGRES_USERNAME:postgres}
+spring.datasource.password=${POSTGRES_PASSWORD:postgres}
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
-eureka.client.serviceUrl.defaultZone=http://localhost:9102/eureka/
+eureka.client.serviceUrl.defaultZone=http://${EUREKA_HOST:localhost}:9102/eureka/
